<resources>
    <string name="app_name">AndroidPhpMySQL</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="user_name">User Name</string>
    <string name="logout">Logout</string>

</resources>
