<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_centerVertical="true"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/user_name"
        android:hint="@string/enter_user_name"
        android:textSize="20sp"
        android:inputType="text"
        android:layout_margin="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:layout_margin="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email_address"
        android:textSize="20sp"
        android:layout_margin="5dp"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register"
        android:layout_margin="5dp"
        android:text="@string/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/already_register"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="Already Registered? \n             Login."/>


</LinearLayout>