<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    tools:context=".LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:hint="@string/enter_user_name"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_margin="5dp"
        tools:ignore="Autofill" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:textSize="20sp"
        android:layout_margin="5dp"
        tools:ignore="Autofill" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_margin="5dp"
        android:text="@string/login"/>

</LinearLayout>